<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_moodrecordpopup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="research.sg.edu.edapp.MoodRecordPopUp">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mood_str"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <RadioGroup
        android:id="@+id/radioMoodGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="49dp"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp">

        <RadioButton
            android:id="@+id/radioMood1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_mood1"
            tools:layout_editor_absoluteX="-5dp"
            tools:layout_editor_absoluteY="73dp" />

        <RadioButton
            android:id="@+id/radioMood2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_mood2" />

        <RadioButton
            android:id="@+id/radioMood3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_mood3" />

        <RadioButton
            android:id="@+id/radioMood4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_mood4" />

        <RadioButton
            android:id="@+id/radioMood5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_mood5" />
    </RadioGroup>

    <Button
        android:id="@+id/btnRecordMood"
        android:layout_width="157dp"
        android:layout_height="35dp"
        android:text="@string/btn_record"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteY="225dp"
        tools:layout_editor_absoluteX="32dp"
        android:layout_below="@+id/radioMoodGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

</RelativeLayout>
