<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="44dp"
        android:text="@string/mood_str"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <!--TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/user_exp_str"
        android:id="@+id/textViewUsrExp" />

    <RadioGroup
        android:id="@+id/radioGroupUsrExp"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.07">

        <RadioButton
            android:id="@+id/radioUsrExp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_uexp1"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioUsrExp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_uexp2" />

        <RadioButton
            android:id="@+id/radioUsrExp3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_uexp3" />

    </RadioGroup-->



    <RadioGroup
        android:id="@+id/radioMoodGroup"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="RtlHardcoded"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1">

        <RadioButton
            android:id="@+id/radioMood1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_mood1"
            android:textSize="18sp" />
        <!--android:checked="true" /-->

        <RadioButton
            android:id="@+id/radioMood2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_mood2"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioMood3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_mood3"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioMood4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_mood4"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioMood5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_mood5"
            android:textSize="18sp" />

        <!--RadioButton
            android:id="@+id/radioMood5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_mood5" /-->

        <!--RadioButton
            android:id="@+id/radioMood6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_mood6" /-->

    </RadioGroup>
    <Button
        android:id="@+id/btnRecordMood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="56dp"
        android:text="@string/btn_record"
        app:layout_constraintLeft_toLeftOf="@+id/radioMoodGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioMoodGroup"
        tools:ignore="RtlHardcoded"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />
    <!--<TextView
        android:id="@+id/textView_1"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/radioMoodGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioMoodGroup" />-->

    <!--hiding the preview, so setting its height and width to 1dp -->
    <!--<TextureView
        android:id="@+id/texture"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/btnRecordMood"
        app:layout_constraintStart_toStartOf="@+id/btnRecordMood"
        app:layout_constraintTop_toBottomOf="@+id/btnRecordMood" />-->

    <!--<Button
        android:id="@+id/btnTakePic"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginTop="28dp"
        android:text="@string/btn_picture"
        app:layout_constraintEnd_toEndOf="@+id/btnRecordMood"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnRecordMood"
        app:layout_constraintTop_toBottomOf="@+id/texture" />-->


</androidx.constraintlayout.widget.ConstraintLayout>

    <!-- RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

        <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout -->
