<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button1"
            style="@style/com_facebook_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="serif"
            android:text="@string/StartApp"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/button2"
            style="@style/com_facebook_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button1"
            android:layout_alignStart="@+id/button1"
            android:layout_below="@+id/button1"
            android:layout_marginTop="28dp"
            android:fontFamily="serif"
            android:text="@string/StopApp"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            style="@style/com_facebook_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button2"
            android:layout_marginTop="44dp"
            android:fontFamily="serif"
            android:text="@string/DispStat"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="normal|bold"
            android:layout_alignLeft="@+id/button2"
            android:layout_alignStart="@+id/button2"
            android:layout_alignRight="@+id/button2"
            android:layout_alignEnd="@+id/button2" />

       <!-- <Button
            android:id="@+id/button4"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="68dp"
            android:fontFamily="serif"
            android:text="@string/ValidatePredictions"
            android:textStyle="bold" />-->




    </RelativeLayout>

</LinearLayout>

